# psswrd

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/categories/: storage.py
src/psswrd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/services/: checker_logic.py  generator_logic.py  storage_operations.py
